--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1><strong>Frozen Fury</strong></h1>
         <p>Welcome to the official website of the elite Scandinavian rock & heavy metal band, Frozen Fury!</p>
         <p>Formed in the icy heart of Oslo, Frozen Fury is a powerhouse trio redefining modern Scandinavian metal. Known for their thunderous riffs, haunting melodies, and lyrics inspired by Norse mythology and modern chaos, they've carved a legendary path through Europe's underground scene.</p>
-        <p>Mr Fitzsimmons brings explosive energy on drums, while Mr Fitzsimmons' clone slays with face-melting guitar solos. And with Dr Jaxon Blake delivering vocals that flip between ethereal and demonic, their live shows hit like a blizzard straight from Valhalla.</p>
+        <p>Dr Gurt brings explosive energy on drums, while Mr Yo slays with face-melting guitar solos. And with Dr Jaxon Blake delivering vocals that flip between ethereal and demonic, their live shows hit like a blizzard straight from Valhalla.</p>
         <p>Their debut song, <em>'Frozen Ground'</em>, shattered streaming records and their follow-up tour sold out arenas from Stockholm to Berlin. Whether you're a battle-hardened metalhead or just vibing to the roar of electric thunder — Frozen Fury will leave you frostbitten and begging for more.</p>
         <p>Frozen Fury © 2025</p>
     </main>
