--- a/band-members.html
+++ b/band-members.html
@@ -23,9 +23,9 @@
     </nav>
 
     <main>
-        <img src="banner.png" alt="Band Members Banner">
+        <img src="band-members.png" alt="Band Members">
         <h1>Band Members</h1>
-        <b>Mr Fitzsimmons, his clone, and Dr Jaxon Blake</b>    
+        <b>Dr Gurt, Dr Yo, and Dr Jaxon Blake</b>    
         <p>Each member of Frozen Fury has zero <em>official</em> qualifications to be playing music, but due to their rough upbringing, they naturally gravitated towards the amazing world of music!</p>
         <p>Frozen Fury © 2025</p>
     </main>
