--- a/band-members.html
+++ b/band-members.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="video/gif" href="obama.gif">
+    <link rel="icon" type="video/gif" href="logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <title>Band Members - Frozen Fury</title>
