--- a/warning.html
+++ b/warning.html
@@ -50,7 +50,7 @@
   </style>
 </head>
 <body>
-  <h1>You are about to enter an external site,<br>that should not reflect the grade of Xavier Tepeli at all, nor should this site you are viewing at the moment.</h1>
+  <h1>You are about to enter another part of the site,<br>that should not reflect the grade of Xavier Tepeli at all, nor should this site you are viewing at the moment.</h1>
   <a href="ticket-booking-fake.html">
     <button>Continue</button>
   </a>
