--- a/music.html
+++ b/music.html
@@ -23,6 +23,10 @@
         <p>"Incredible; Absolute Cinema" — Spotify</p>
         <a href="Frozen Ground.pdf">
             <button>Check Lyrics</button>
+             <audio controls>
+        <source src="Frozen Ground.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
         </a>
         <p>Frozen Fury © 2025</p>
     </main>
