Added new pages

--- a/music.html
+++ b/music.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="nav-content">
-            <a href="index.html">Home</a>
+        <div class="nav-content">            <a href="index.html">Home</a>
             <a href="band-members.html">Band Members</a>
             <a href="music.html">Music</a>
             <a href="upcoming-shows.html">Upcoming Shows</a>
+            <a href="reviews.html">Reviews</a>
+            <a href="contact.html">Contact</a>
         </div>
     </nav>
 
