Added backround to index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Frozen Fury</title>
 </head>
 
-<body>
+<body class="index-page">
     <nav class="navbar">
-        <div class="nav-content">            <a href="index.html">Home</a>
+        <div class="nav-content"><a href="index.html">Home</a>
             <a href="band-members.html">Band Members</a>
             <a href="music.html">Music</a>
             <a href="upcoming-shows.html">Upcoming Shows</a>
