--- a/ticket-booking-fake.html
+++ b/ticket-booking-fake.html
@@ -1,108 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Frozen Fury Australia Tour Booking</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #111;
-      color: #eee;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 2rem;
-    }
-    h1 { color: #0ff; }
-    form {
-      background: #222;
-      padding: 1.5rem;
-      border-radius: 8px;
-      max-width: 400px;
-      width: 100%;
-    }
-    label {
-      display: block;
-      margin-top: 1rem;
-    }
-    select, input {
-      width: 100%;
-      padding: 0.5rem;
-      margin-top: 0.3rem;
-      border: none;
-      border-radius: 4px;
-    }
-    button {
-      margin-top: 1.5rem;
-      padding: 0.7rem;
-      width: 100%;
-      background: #0ff;
-      border: none;
-      border-radius: 4px;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #0cc;
-    }
-    #message {
-      margin-top: 2rem;
-      font-size: 1.2rem;
-      color: #f66;
-    }
-    #loader {
-      display: none;
-      margin-top: 1rem;
-      font-style: italic;
-      color: #aaa;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="logo.png">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
+    <title>Frozen Fury - Ticket Booking</title>
+    <style>
+        .booking-container {
+            max-width: 600px;
+            margin: 2rem auto;
+            background-color: rgba(255, 255, 255, 0.9);
+            padding: 2rem;
+            border-radius: 12px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .booking-form label {
+            display: block;
+            margin-top: 1rem;
+            color: #1f1f1f;
+            font-weight: bold;
+        }
+
+        .booking-form select,
+        .booking-form input {
+            width: 100%;
+            padding: 0.8rem;
+            margin-top: 0.3rem;
+            border: 1px solid #ddd;
+            border-radius: 6px;
+            font-family: 'Lexend Deca', sans-serif;
+        }
+
+        .booking-form button {
+            margin-top: 1.5rem;
+            padding: 0.8rem 1.5rem;
+            width: 100%;
+            background-color: #ff4444;
+            color: white;
+            border: none;
+            border-radius: 6px;
+            font-size: 1rem;
+            font-weight: bold;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            font-family: 'Lexend Deca', sans-serif;
+        }
+
+        .booking-form button:hover {
+            background-color: #ff0000;
+            transform: scale(1.05);
+        }
+
+        #loader {
+            display: none;
+            margin-top: 1rem;
+            font-style: italic;
+            color: #666;
+            text-align: center;
+        }
+
+        #message {
+            margin-top: 2rem;
+            font-size: 1.2rem;
+            color: #ff4444;
+            text-align: center;
+            font-weight: bold;
+        }
+
+        body {
+            background-image: url('concert_1.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+        }
+    </style>
 </head>
 <body>
+    <nav class="navbar">
+        <div class="nav-content">
+            <a href="index.html">Home</a>
+            <a href="band-members.html">Band Members</a>
+            <a href="music.html">Music</a>
+            <a href="upcoming-shows.html">Upcoming Shows</a>
+            <a href="reviews.html">Reviews</a>
+            <a href="contact.html">Contact</a>
+        </div>
+    </nav>
 
-  <h1>Frozen Fury Australia Tour</h1>
-  <p>Fill out the form to reserve your spot… if you can.</p>
+    <main>
+        <div class="booking-container">
+            <h1>Frozen Fury Australia Tour</h1>
+            <p>Fill out the form to reserve your spot… if you can.</p>
 
-  <form id="bookingForm">
-    <label for="showSelect">Choose your show:</label>
-    <select id="showSelect" required>
-      <option value="" disabled selected>Select a show</option>
-      <option value="19 May 2025, 9:00PM @ MCG, Melbourne">19 May 2025, 9:00 PM – MCG, Melbourne</option>
-      <option value="24 May 2025, 6:30PM @ Sydney Opera House">24 May 2025, 6:30 PM – Sydney Opera House</option>
-      <option value="28 June 2025, 5:15PM @ Adelaide Oval">28 June 2025, 5:15 PM – Adelaide Oval</option>
-      <option value="29 October 2025, 6:30PM @ Melbourne PAC">29 October 2025, 6:30 PM – Melbourne Performing Arts Centre</option>
-    </select>
+            <form id="bookingForm" class="booking-form">
+                <label for="showSelect">Choose your show:</label>
+                <select id="showSelect" required>
+                    <option value="" disabled selected>Select a show</option>
+                    <option value="19 May 2025, 9:00PM @ MCG, Melbourne">19 May 2025, 9:00 PM – MCG, Melbourne</option>
+                    <option value="24 May 2025, 6:30PM @ Sydney Opera House">24 May 2025, 6:30 PM – Sydney Opera House</option>
+                    <option value="28 June 2025, 5:15PM @ Adelaide Oval">28 June 2025, 5:15 PM – Adelaide Oval</option>
+                    <option value="29 October 2025, 6:30PM @ Melbourne PAC">29 October 2025, 6:30 PM – Melbourne Performing Arts Centre</option>
+                </select>
 
-    <label for="nameInput">Your Name:</label>
-    <input type="text" id="nameInput" placeholder="Enter your name" required>
+                <label for="nameInput">Your Name:</label>
+                <input type="text" id="nameInput" placeholder="Enter your name" required>
 
-    <label for="emailInput">Your Email:</label>
-    <input type="email" id="emailInput" placeholder="you@example.com" required>
+                <label for="emailInput">Your Email:</label>
+                <input type="email" id="emailInput" placeholder="you@example.com" required>
 
-    <label for="ticketCount">Number of Tickets:</label>
-    <input type="number" id="ticketCount" min="1" max="10" value="1" required>
+                <label for="ticketCount">Number of Tickets:</label>
+                <input type="number" id="ticketCount" min="1" max="10" value="1" required>
 
-    <button type="submit">Reserve Tickets</button>
-    <div id="loader">Processing your booking… 🔄</div>
-  </form>
+                <button type="submit">Reserve Tickets</button>
+                <div id="loader">Processing your booking… 🔄</div>
+            </form>
 
-  <div id="message"></div>
+            <div id="message"></div>
+        </div>
+    </main>
 
-  <script>
-    document.getElementById('bookingForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      // Hide form controls and show loader
-      Array.from(this.elements).forEach(el => el.disabled = true);
-      document.getElementById('loader').style.display = 'block';
+    <script>
+        document.getElementById('bookingForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            Array.from(this.elements).forEach(el => el.disabled = true);
+            document.getElementById('loader').style.display = 'block';
 
-      // Simulate processing delay
-      setTimeout(() => {
-        document.getElementById('loader').style.display = 'none';
-        document.getElementById('message').textContent = 
-          "😞 Sorry, you're too late—this show is completely SOLD OUT.";
-      }, 2000);
-    });
-  </script>
-
+            setTimeout(() => {
+                document.getElementById('loader').style.display = 'none';
+                document.getElementById('message').textContent = 
+                    "Sorry, this show is completely SOLD OUT.";
+            }, 2000);
+        });
+    </script>
 </body>
 </html>
