--- a/warning.html
+++ b/warning.html
@@ -51,7 +51,7 @@
 </head>
 <body>
   <h1>You are about to enter another part of the site,<br>that should not reflect the grade of Xavier Tepeli at all, nor should this site you are viewing at the moment.</h1>
-  <a href="ticket-booking-fake.html">
+  <a href="https://media.tenor.com/onTlUVMtWy4AAAAM/rickroll-rick.gif">
     <button>Continue</button>
   </a>
 </body>
