--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
     </nav>
 
         <h1>Contact Us</h1>
+    <head>
         <div class="contact-container">
             <div class="contact-info">
                 <h2>Get in Touch</h2>
@@ -52,5 +53,6 @@
                 </div>
             </div>
         </div>
+    <head>
 </body>
 </html>
