--- a/contact.html
+++ b/contact.html
@@ -17,32 +17,34 @@
             <a href="contact.html">Contact</a>
         </div>
     </nav>
-
+    <main></main>
         <h1>Contact Us</h1>
-    <head>
         <div class="contact-container">
-            <div class="contact-info">
-                <h2>Get in Touch</h2>
-                <div class="contact-section">
-                    <h3>Management</h3>
+            <h2>Get in Touch</h2>
+            <div class="contact-section">
+                <h3>Management</h3>
+                <div class="contact-info">
                     <p>Thor Anderson (Band Manager)</p>
                     <p><a href="mailto:management@frozenfury.com">management@frozenfury.com</a></p>
                 </div>
-
-                <div class="contact-section">
-                    <h3>Booking</h3>
+            </div>
+            <div class="contact-section">
+                <h3>Booking</h3>
+                <div class="contact-info">
                     <p>Freya Nilsson (Tour Manager)</p>
                     <p><a href="mailto:bookings@frozenfury.com">bookings@frozenfury.com</a></p>
                 </div>
-
-                <div class="contact-section">
-                    <h3>Press Inquiries</h3>
+            </div>
+            <div class="contact-section">
+                <h3>Press Inquiries</h3>
+                <div class="contact-info">
                     <p>Erik Larsson (PR Manager)</p>
                     <p><a href="mailto:press@frozenfury.com">press@frozenfury.com</a></p>
                 </div>
-
-                <div class="contact-section">
-                    <h3>Fan Mail</h3>
+            </div>
+            <div class="contact-section">
+                <h3>Fan Mail</h3>
+                <div class="contact-info">
                     <p>Send your letters to:</p>
                     <address>
                         Frozen Fury Fan Mail<br>
@@ -53,6 +55,6 @@
                 </div>
             </div>
         </div>
-    <head>
+    </main>
 </body>
 </html>
